--- a/allDataMaps.Rmd
+++ b/allDataMaps.Rmd
@@ -13,7 +13,6 @@ output:
 library(DataComputing)
 library(readr)
 library(rgdal)
-
 library(sp)
 library(rgeos)
 library(rgdal)
@@ -33,22 +32,17 @@ Visualization
 -------------------
 
 ```{r}
-
+#' Downloads and loads the county-level simplified geographic boundary shapefile from the US Census Shapefiles.
+#' Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html
+#' @Year: 2015
+#'
+#' @return spatial data frame of county-level geographic boundaries
 GetCountyShapefile <- function(){
-  
-  # Download county shape file from Tiger.
-  # https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html
-  #location <- "C:\\Users\\Katrlyn\\stats133Project\\cb_2016_us_county_500k"
-  #us.map <- readOGR(dsn = location, layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
-  
-  # Other Download method
   library(tigris)
   # Download county shape file from US Census using streamlined TIGRIS package. 
-  #cb = TRUE indicates that we're choosing simplified cartographic boundaries
   us.map <- tigris::counties(cb = TRUE, year = 2015)
   
-  # Clean county shapefile 
-  
+  # ----Clean county shapefile----
   # Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
   # Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
   us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
@@ -56,7 +50,6 @@ GetCountyShapefile <- function(){
   # Make sure other outling islands are removed.
   us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
                                           "95", "79"),]
-
   return(us.map)  
 }
 
@@ -66,51 +59,33 @@ Visualization Prep
 -----------------
 
 ```{r, echo=FALSE}
-
-countyShapefile <- GetCountyShapefile()
-
 load("all_data.RData")
-
-small_data <- all_data %>% 
-  select(FIPSCode, StateFips, UrbanCode, UrbanRank, Income,Unemployment, Pollution, TreeCanopy, AvailGreenSpace, TreeCanopyCover)
-
-#Only map California
-# small_data <- small_data %>% 
-#   subset(StateFips == "06"|StateFips == "08")
-# 
-# counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "inner")
-
-#Map all coutnies in the USA
-
-#Merge spatial df with air quality data.
-counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
-
 ```
-
 
 ----------
 Arsenic
 ----------
 ```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
 
+small_data <- all_data %>% 
+  select(FIPSCode, arsenic)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
 # Format popup data for leaflet map.
+
 popup_dat <- paste(sep = "<br/>",
   "<b>County: </b>", 
   counties$NAME, 
   "<b>Value: </b>", 
   counties$Income)
-
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
 #Let leaflet calculate the colors and labels for you 
 pal <- colorNumeric(
   palette =  "YlGnBu",
   domain = counties$Income
 )
-
-
-# Render final map in leaflet.
+# Base map of county boundaries
 map <- leaflet(counties, width = "100%") %>% addTiles()
 
 income_map <- map %>% 
@@ -125,12 +100,17 @@ income_map <- map %>%
 income_map
 ```
 
-----------
-Income
-----------
+------------------------------------
+Household Median Income Leaflet Plot
+------------------------------------
 ```{r}
+countyShapefile <- GetCountyShapefile()
 
-#Only map california
+small_data <- all_data %>% 
+  select(FIPSCode, Income)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
 
 # Format popup data for leaflet map.
 popup_dat <- paste(sep = "<br/>",
@@ -139,17 +119,13 @@ popup_dat <- paste(sep = "<br/>",
   "<b>Value: </b>", 
   counties$Income)
 
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
 #Let leaflet calculate the colors and labels for you 
 pal <- colorNumeric(
   palette =  "YlGnBu",
   domain = counties$Income
 )
 
-# Render final map in leaflet.
-
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
 income_map <- map %>% 
@@ -162,49 +138,24 @@ income_map <- map %>%
     opacity = 1)
 
 income_map
+
+library(htmlwidgets)
+saveWidget(income_map, file="income_map.html", selfcontained = FALSE)
 ```
--------------------
-Unemployment rate
-------------------
-```{r, eval=FALSE}
 
-# Format popup data for leaflet map.
-popup_dat <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>",  
-  counties$Unemployment)
-
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
-#Let leaflet calculate the colors and labels for you 
-pal <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$Unemployment
-)
-
-
-# Render final map in leaflet.
-
-map <- leaflet(counties) %>% addTiles()
-
-unemploy_map <- map %>% 
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal(Unemployment), fillOpacity = 1, popup = popup_dat, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
-  addLegend("bottomright", pal = pal, values = ~Unemployment,
-    title = "Unemployment Rate (2015)",
-    labFormat = labelFormat(suffix = "%"), na.label = "county data missing",
-    opacity = 1)
-
-unemploy_map
-```
----------------------------------
-Pollution leaflet visualization
---------------------------------
+------------------------------------------------
+Air quality (Particulate matter) Leaflet Plot
+------------------------------------------------
 
 ```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
+
+small_data <- all_data %>% 
+  select(FIPSCode, Pollution)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
+
 # Format popup data for leaflet map.
 popup_dat <- paste(sep = "<br/>",
   "<b>County: </b>", 
@@ -218,12 +169,10 @@ pal <- colorNumeric(
   domain = counties$Pollution
 )
 
-# Render base map
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
 pollution_map <- map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
   addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
     fillColor = ~pal(Pollution), fillOpacity = 1, popup = popup_dat, 
     highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE), group = "Pollution") %>%
@@ -238,11 +187,19 @@ library(htmlwidgets)
 saveWidget(pollution_map, file="pollution_map.html", selfcontained = FALSE)
 ```
 
----------------------
-TreeCanopy per person
----------------------
+-------------------------------------
+TreeCanopy per person Leaflet Plot
+-------------------------------------
 
 ```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
+
+small_data <- all_data %>% 
+  select(FIPSCode, TreeCanopy)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
+
 # Format popup data for leaflet map.
 popup_dat <- paste(sep = "<br/>",
   "<b>County: </b>", 
@@ -250,19 +207,16 @@ popup_dat <- paste(sep = "<br/>",
   "<b>Value: </b>", 
   counties$TreeCanopy)
 
-
 #Let leaflet calculate the colors and labels for you 
 pal <- colorNumeric(
   palette =  "YlGnBu",
   domain = counties$TreeCanopy, n= 9
 )
 
-#pal <- colorQuantile("YlGnBu", NULL, n = 9)  #Manual color bins
-
-# Render map in leaflet.
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
-treeCanopy_map <- map %>% 
+treeCanopyPerson_map <- map %>% 
   addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
     fillColor = ~pal(TreeCanopy), fillOpacity = 1, popup = popup_dat, 
     highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
@@ -271,15 +225,25 @@ treeCanopy_map <- map %>%
     labFormat = labelFormat(suffix = " m2/person"), na.label = "county data missing",
     opacity = 1)
 
-treeCanopy_map
+treeCanopyPerson_map
+
+library(htmlwidgets)
+saveWidget(treeCanopyPerson_map, file="treeCanopyPerson_map.html", selfcontained = FALSE)
 ```
 
 
------------------------------
-2013 Urban Influence Codes
------------------------------
+--------------------------------------------
+2013 Rural-Urban Continuum Code Leaflet Plot
+--------------------------------------------
 
 ```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
+
+small_data <- all_data %>% 
+  select(FIPSCode, UrbanCode)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
 
 # Format popup data for leaflet map.
 popup_dat <- paste(sep = "<br/>",
@@ -288,23 +252,16 @@ popup_dat <- paste(sep = "<br/>",
   "<b>Value: </b>", 
   counties$InfluenceCode)
 
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
 #Let leaflet calculate the colors and labels for you 
 pal <- colorNumeric(
   palette =  "YlGnBu",
   domain = counties$UrbanCode, n= 12
 )
 
-
-# Render final map in leaflet.
-
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
-map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+urbanCode_map <- map %>% 
   addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
     fillColor = ~pal(UrbanCode), fillOpacity = 1, popup = popup_dat, 
     highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
@@ -312,96 +269,18 @@ map %>%
     title = "Urban Influence Code (2013)",
     labFormat = labelFormat(suffix = "number"), na.label = "county data missing",
     opacity = 1)
-```
 
-----------------
-AvailGreenSpace
-----------------
-```{r, eval=FALSE}
-# Format popup data for leaflet map.
-popup_dat <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$AvailGreenSpace)
-
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
-#Let leaflet calculate the colors and labels for you 
-pal <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$AvailGreenSpace
-)
-
-
-# Render final map in leaflet.
-
-map <- leaflet(counties) %>% addTiles()
-
-availGreenSpace <- map %>% 
-
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal(AvailGreenSpace), fillOpacity = 1, popup = popup_dat, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
-  addLegend("bottomright", pal = pal, values = ~AvailGreenSpace,
-    title = "Available Green Space",
-    labFormat = labelFormat(suffix = "hectare"), na.label = "county data missing",
-    opacity = 1)
-
-availGreenSpace
-```
-
--------------------
-Tree Canopy Cover in Developped regions
--------------------
-```{r, eval=FALSE}
-
-# Format popup data for leaflet map.
-popup_dat <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$TreeCanopyCover)
-
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
-#Let leaflet calculate the colors and labels for you 
-pal <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$TreeCanopyCover
-)
-
-
-# Render final map in leaflet.
-
-map <- leaflet(counties) %>% addTiles()
-
-treeCanopyDeveloped <- map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal(TreeCanopyCover), fillOpacity = 1, popup = popup_dat, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
-  addLegend("bottomright", pal = pal, values = ~TreeCanopyCover,
-    title = "Tree canopy cover in developed regions",
-    labFormat = labelFormat(suffix = "%"), na.label = ">0.55%",
-    opacity = 1)
-
-treeCanopyDevelopped
+urbanCode_map 
 
 library(htmlwidgets)
-saveWidget(treeCanopyDeveloped, file="treeCanopyDeveloped.html", selfcontained = FALSE)
+saveWidget(urbancode_map, file="urbancode_map.html", selfcontained = FALSE)
 ```
 
 -----------------------
-UrbanRank
+UrbanRank Leaflet Plot
 -----------------------
-
 ```{r, eval=FALSE}
-
-#countyShapefile <- GetCountyShapefile()
+countyShapefile <- GetCountyShapefile()
 
 small_data <- all_data %>% 
   select(FIPSCode, Bachelors, UrbanRank, UrbanCode)
@@ -417,26 +296,16 @@ popup_dat <- paste(sep = "<br/>",
   "<b>Value: </b>", 
   counties$UrbanCode)
 
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
-#Let leaflet calculate the colors and labels for you 
-# pal <- colorNumeric(
-#   palette =  "YlGnBu",
-#   domain = counties$Bachelors
-# )
+#Let leaflet calculate the colors and labels
 pal<- colorFactor(
   palette = "YlGnBu", levels = factor(counties$UrbanRank, levels =c("Metropolitan", "Urban", "Rural", ordered = TRUE))
 )
 
 
-# Render final map in leaflet.
-
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
-urbanrank <- map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+urbanrank_map <- map %>% 
   addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
     fillColor = ~pal(UrbanRank), fillOpacity = 1, popup = popup_dat, 
     highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
@@ -445,27 +314,115 @@ urbanrank <- map %>%
     labFormat = labelFormat(), na.label = "county missing data",
     opacity = 1)
 
-urbanrank
+urbanrank_map
 
 library(htmlwidgets)
-saveWidget(urbanrank, file="urbanrank.html", selfcontained = FALSE)
+saveWidget(urbanrank_map, file="urbanrank_map.html", selfcontained = FALSE)
 ```
 
+----------------
+AvailGreenSpace Leaflet Plot
+----------------
+```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
 
------------------------
-Education (Bachelors map)
------------------------
+small_data <- all_data %>% 
+  select(FIPSCode, AvailGreenSpace)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$AvailGreenSpace)
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$AvailGreenSpace
+)
+
+# Base map of county boundaries
+map <- leaflet(counties) %>% addTiles()
+
+availGreenSpace_map <- map %>% 
+
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(AvailGreenSpace), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~AvailGreenSpace,
+    title = "Available Green Space",
+    labFormat = labelFormat(suffix = "hectare"), na.label = "county data missing",
+    opacity = 1)
+
+availGreenSpace_map
+
+library(htmlwidgets)
+saveWidget(availGreenSpace_map, file="availGreenSpace_map.html", selfcontained = FALSE)
+```
+
+---------------------------------------
+Tree Canopy Cover in Developped regions Leaflet Plot
+---------------------------------------
+```{r, eval=FALSE}
+countyShapefile <- GetCountyShapefile()
+
+small_data <- all_data %>% 
+  select(FIPSCode, TreeCanopyCover)
+
+#Filter out outlier values
+small_data<-small_data%>%filter(TreeCanopyCover<.55)
+
+#Merge spatial df with air quality data.
+counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$TreeCanopyCover)
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$TreeCanopyCover
+)
+
+# Base map of county boundaries
+map <- leaflet(counties) %>% addTiles()
+
+treeCanopyDeveloped_map <- map %>% 
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(TreeCanopyCover), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~TreeCanopyCover,
+    title = "Tree canopy cover in developed regions",
+    labFormat = labelFormat(suffix = "%"), na.label = ">0.55%",
+    opacity = 1)
+
+treeCanopyDevelopped_map
+
+library(htmlwidgets)
+saveWidget(treeCanopyDeveloped_map, file="treeCanopyDeveloped_map.html", selfcontained = FALSE)
+```
+
+---------------------------------------
+Education (Bachelors map) Leaflet Plot
+---------------------------------------
 
 ```{r, eval=FALSE}
 
-#countyShapefile <- GetCountyShapefile()
+countyShapefile <- GetCountyShapefile()
 
 small_data <- all_data %>% 
   select(FIPSCode, Bachelors)
 
 # Merge spatial df with air quality data.
 counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
-
 
 # Format popup data for leaflet map.
 popup_dat <- paste(sep = "<br/>",
@@ -474,23 +431,16 @@ popup_dat <- paste(sep = "<br/>",
   "<b>Value: </b>", 
   counties$Bachelors)
 
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
 #Let leaflet calculate the colors and labels for you 
 pal <- colorNumeric(
   palette =  "YlGnBu",
   domain = counties$Bachelors
 )
 
-
-# Render final map in leaflet.
-
+# Base map of county boundaries
 map <- leaflet(counties) %>% addTiles()
 
-education <- map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+education_map <- map %>% 
   addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
     fillColor = ~pal(Bachelors), fillOpacity = 1, popup = popup_dat, 
     highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
@@ -499,131 +449,11 @@ education <- map %>%
     labFormat = labelFormat(suffix = "%"), na.label = "county missing data",
     opacity = 1)
 
-education
+education_map
 
 library(htmlwidgets)
-saveWidget(education, file="educationBachelors.html", selfcontained = FALSE)
+saveWidget(education_map, file="education_map.html", selfcontained = FALSE)
 ```
 
 
------------------------
-Education (Ratio)
------------------------
 
-```{r, eval=FALSE}
-
-
-
-countyShapefile <- GetCountyShapefile()
-
-small_data <- all_data %>% 
-  select(FIPSCode, coll_HS) %>% 
-  filter(coll_HS < 5)
-
-# Merge spatial df with air quality data.
-counties <- geo_join(countyShapefile, small_data, "GEOID", "FIPSCode", how = "left")
-
-
-# Format popup data for leaflet map.
-popup_dat <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$coll_HS)
-
-
-#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
-
-#Let leaflet calculate the colors and labels for you 
-pal <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$coll_HS
-)
-
-
-# Render final map in leaflet.
-
-map <- leaflet(counties) %>% addTiles()
-
-education <- map %>% 
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal(coll_HS), fillOpacity = 1, popup = popup_dat, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
-  addLegend("bottomright", pal = pal, values = ~coll_HS,
-    title = "Ratio of higher education to<br>lower education attainment",
-    labFormat = labelFormat(), na.label = ">5%",
-    opacity = 1)
-
-education
-
-library(htmlwidgets)
-saveWidget(education, file="education.html", selfcontained = FALSE)
-```
-
-#Playing with Layer Control
-
-```{r, eval=FALSE}
-# Format popup data for leaflet map.
-popup_dat1 <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$Pollution)
-
-popup_dat2 <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$UrbanCode)
-
-popup_dat3 <- paste(sep = "<br/>",
-  "<b>County: </b>", 
-  counties$NAME, 
-  "<b>Value: </b>", 
-  counties$Income)
-
-
-#Let leaflet calculate the colors and labels for you 
-pal1 <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$Pollution
-)
-
-pal2 <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$UrbanCode
-)
-
-pal3 <- colorNumeric(
-  palette =  "YlGnBu",
-  domain = counties$Income
-)
-
-# Render final map in leaflet.
-
-map <- leaflet(counties) %>% addTiles()
-
-map %>% 
-  #Base Groups
-  #Stroke indicates outline presence
-  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal1(Pollution), fillOpacity = 1, popup = popup_dat1, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE), group = "Pollution") %>%
-  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-    fillColor = ~pal2(UrbanCode), fillOpacity = 1, popup = popup_dat2, 
-    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE), group = "UrbanInfluenceCodes") %>% 
-  # addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
-  #   fillColor = ~pal3(HouseholdIncome2015), fillOpacity = 1, popup = popup_dat3, 
-  #   highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE), group = "HouseholdIncome2015") %>% 
-  
-  # Layers control
-  addLayersControl(
-    baseGroups = c("Pollution", "UrbanInfluenceCodes"),
-    options = layersControlOptions(collapsed = FALSE)
-  ) 
-
-
-```
