--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -4,8 +4,8 @@ author: ""
 date: ""
 output:  
   html_document:
-    fig_height: 3
-    fig_width: 5
+    fig_height: 5
+    fig_width: 7
 ---
 <!-- Don't edit in between this line and the one below -->
 ```{r include=FALSE}
@@ -80,6 +80,7 @@ stargazer::stargazer(ep1, ep2, type="text",
 ## Boxplots for air pollution, arsenic, and tree cover (Kana)
 ```{r}
 load("all_data.RData")
+library(ggplot2)
 #head(all_data)
 
 bach_vs_pollution_lm <- all_data %>%
@@ -96,6 +97,8 @@ bach_vs_pollution_lm
 
 bach_vs_tree_lm <- all_data %>% 
   na.omit() %>%
+   #Filter out outlier values
+  filter(TreeCanopyCover<.55) %>%
   ggplot(aes(TreeCanopyCover, Bachelors)) +
   geom_point(aes(color = UrbanRank), alpha = 0.7, size = 2, show.legend = FALSE) +
   scale_color_manual(values = c("#8dd3c7","#80b1d3","#bc80bd")) +
@@ -109,12 +112,13 @@ bach_vs_tree_lm
 bach_vs_green_lm <- all_data %>% 
   na.omit() %>%
   filter(AvailGreenSpace < 10^6) %>%
+  mutate(AvailGreenSpace = AvailGreenSpace/100000) %>%
   ggplot(aes(AvailGreenSpace, Bachelors)) +
   geom_point(aes(color = UrbanRank), alpha = 0.7, size = 2, show.legend = FALSE) +
   scale_color_manual(values = c("#8dd3c7","#80b1d3","#bc80bd")) +
   geom_smooth(method = "lm",  fill = "black", col = "black") +
   facet_grid(. ~ UrbanRank) +
-  labs(x="Available Green Space", y="% Adults with Bachelor's Degrees") +
+  labs(x="Available Green Space (100,000 ha)", y="% Adults with Bachelor's Degrees") +
   theme_bw() 
 
 bach_vs_green_lm 
@@ -127,6 +131,7 @@ bach_vs_pollution_lm_income <- all_data %>%
   geom_smooth(method = "lm",  fill = "black", col = "black") +
   facet_grid(~ IncomeQuartile) +
   labs(x="Concentration of PM 2.5 (ug/m^3)", y="% Adults with Bachelor's Degrees") +
+  xlim(5, 15) +
   theme_bw()
 
 bach_vs_pollution_lm_income
@@ -134,6 +139,8 @@ bach_vs_pollution_lm_income
  
 bach_vs_tree_lm_income <- all_data %>% 
   na.omit() %>%
+   #Filter out outlier values
+  filter(TreeCanopyCover<.55) %>%
   ggplot(aes(TreeCanopyCover, Bachelors)) +
   geom_point(aes(color = IncomeQuartile), alpha = 0.7, size = 2, show.legend = FALSE) +
   scale_color_manual(values = c("#a1d99b","#41ab5d","#238b45","#005a32")) +
@@ -146,15 +153,21 @@ bach_vs_tree_lm_income
 
 bach_vs_green_lm_income <- all_data %>% 
   na.omit() %>%
+  filter(AvailGreenSpace < 10^6) %>%
+  mutate(AvailGreenSpace = AvailGreenSpace/100000) %>%
   ggplot(aes(AvailGreenSpace, Bachelors)) +
   geom_point(aes(color = IncomeQuartile), alpha = 0.7, size = 2, show.legend = FALSE) +
   scale_color_manual(values = c("#a1d99b","#41ab5d","#238b45","#005a32")) +
   geom_smooth(method = "lm",  fill = "black", col = "black") +
   facet_grid(. ~ IncomeQuartile) +
-  labs(x="Available Green Space", y="% Adults with Bachelor's Degrees") +
+  labs(x="Available Green Space (100,000 ha)", y="% Adults with Bachelor's Degrees") +
   theme_bw() 
 
 bach_vs_green_lm_income
+#ggsave("bach_vs_green_lm_income.png", plot = bach_vs_green_lm_income, width = 8, height = 4)
+
+
+
 #Used in the blox plot 
 #all_data_UrbanRank <- all_data %>% 
 #  select(UrbanRank, LessThanHS, HSDiploma, SomeCollege, Bachelors) %>%
